# usb-device-viewer

./: .env  .gitignore  99-usb-hid.rules  README.md  build.bat  build.py  build.sh  electrobun.config.ts  package.json  pyproject.toml  run.bat  run.sh  run_pyside.bat  run_pyside.sh  usb_viewer.spec  usb_viewer_pyside.py  vite.config.ts
.github/workflows/: build.yml
patches/: node-hid+busType.patch
scripts/: crypto-polyfill-src.ts  patch-electrobun-crypto.ts  prebuild.ts
src/bun/: hid-backend.ts  hid-ffi.ts  index.ts
src/renderer/: App.svelte  app.ts  index.html  main.ts  style.css
src/renderer-dist/: index.html
src/renderer-dist/assets/: index-B5CLIdQH.js  index-BTkO4Tno.js  index-BgVcZXJo.css  index-Bps3g6Wv.js  index-CAuF9_tV.js  index-CHhP_0nK.js  index-CoFQ2FDc.css  index-DDrcanDY.css  index-Dz8KHbHK.js  index-IBuHXF8i.css  index-RcXqQW9d.css  index-WfxrjbCh.css  index-eRcMs2CW.js  index-z62MzEMQ.js
src/renderer/components/: DeviceList.svelte  Modal.svelte  SearchBar.svelte  Toast.svelte  Toolbar.svelte
src/shared/: types.ts
src/usbviewer/: __init__.py  __main__.py  app.py
