[project]
name = "usb-device-viewer"
version = "3.0.0"
description = "跨平台USB设备信息查看工具"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Wang Yu", email = "moke521_wang@163.com" }
]

# 运行时依赖
dependencies = [
    "PySide6>=6.6.0",
    "hidapi>=0.14.0",
    "nuitka>=2.0",
    "ordered-set>=4.1.0",
]


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

